# projectwrap

./: CHANGELOG.md  LICENSE  README.md  issues.org  pyproject.toml
.github/workflows/: ci.yml
completions/: _project  project.bash  project.fish
src/project_wrap/: __init__.py  cli.py  core.py  deps.py  scaffold.py  validate.py  vault.py
src/project_wrap/templates/: init.fish  init.sh  project.toml
tests/: conftest.py  test_cli.py  test_core.py  test_deps.py  test_scaffold.py  test_vault.py  test_vault_integration.py
